# ESP32-SoftAP-Captive-Portal-WiFi-Provisioner

./: CMakeLists.txt  README.md  sdkconfig.defaults
components/wifi_provisioner/: CMakeLists.txt  dns_server.cpp  wifi_provisioner.cpp
components/wifi_provisioner/include/: wifi_provisioner.hpp
components/wifi_provisioner/web/: index_de.html  index_en.html  index_fr.html  index_hu.html  index_it.html  index_tr.html  style.css
main/: CMakeLists.txt  main.cpp
